--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -15,6 +15,10 @@
       <attachments [entity]="tiers" [editMode]="editMode" [entityType]="TIERS_ENTITY_TYPE.entityType">
       </attachments>
     </mat-tab>
+    <mat-tab label="Mails" *ngIf="tiers.id">
+      <automatic-mail-list [tiers]="tiers">
+      </automatic-mail-list>
+    </mat-tab>
     <mat-tab label="Devis" *ngIf="tiers.id!=null && tiers.id!=undefined">
       <quotation-list class="integration-component" *ngIf="this.quotationSearch.customerOrders"
         [quotationSearch]="quotationSearch" [isForTiersIntegration]="true">
