--- a/client/src/app/modules/quotation/components/ordering-list/ordering-list.component.html
+++ b/client/src/app/modules/quotation/components/ordering-list/ordering-list.component.html
@@ -14,8 +14,8 @@
         </td>
         <td>
           <generic-date-range-picker [(modelStart)]="orderingSearch.startDate" [(modelEnd)]="orderingSearch.endDate"
-            label="Date de création" [form]="orderingSearchForm" propertyNameStart="startDate" propertyNameEnd="endDate"
-            (onDateChange)="putDefaultPeriod()">
+            label="Date de création" [form]="orderingSearchForm" propertyNameStart="startDate"
+            propertyNameEnd="endDate">
           </generic-date-range-picker>
         </td>
         <td class="fab-td-button">
