--- a/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
+++ b/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
@@ -140,13 +140,13 @@
                 </select-payment-types>
               </td>
               <td
-                *ngIf="tiers  && tiers.paymentType && (tiers.paymentType.id==paymentTypePrelevement.id || tiers.paymentType.id==paymentTypeVirement.id)">
+                *ngIf="tiers  && tiers.paymentType && (tiers.paymentType.id==paymentTypePrelevement.id || tiers.paymentType.id==paymentTypePrelevement.id)">
                 <generic-input [(model)]="tiers.paymentIban" label="IBAN" [form]="settlementBillingForm"
                   propertyName="paymentIban" [isMandatory]="false" [isDisabled]="!editMode" [maxLength]="40">
                 </generic-input>
               </td>
               <td
-                *ngIf="tiers  && tiers.paymentType && (tiers.paymentType.id==paymentTypePrelevement.id || tiers.paymentType.id==paymentTypeVirement.id)">
+                *ngIf="tiers  && tiers.paymentType && (tiers.paymentType.id==paymentTypePrelevement.id || tiers.paymentType.id==paymentTypePrelevement.id)">
                 <generic-input [(model)]="tiers.paymentBic" label="BIC" [form]="settlementBillingForm"
                   propertyName="paymentBic" [isMandatory]="false" [isDisabled]="!editMode" [maxLength]="40">
                 </generic-input>
@@ -219,6 +219,11 @@
                   [isDisabled]="!editMode" [isMandatory]="true" [form]="settlementBillingForm"
                   propertyName="billingClosureRecipientType" label="Destinataire(s)">
                 </radio-group-billing-closure-recipient>
+              </td>
+              <td
+                *ngIf="billingClosureDocument.billingClosureRecipientType && billingClosureDocument.billingClosureRecipientType.id == billingClosureRecipientTypeOther.id">
+                <chips-mail [(model)]="billingClosureDocument.mailsClient" label="Mails" [form]="settlementBillingForm"
+                  propertyName="mailsClient" [isMandatory]="true" [isDisabled]="!editMode"></chips-mail>
               </td>
             </tr>
           </table>
