--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -29,6 +29,9 @@
         [orderingSearch]="orderingSearch" [isForTiersIntegration]="true">
       </ordering-list>
     </mat-tab>
+    <mat-tab label="Factures" *ngIf="invoiceSearch.customerOrders">
+      <invoice-list [invoiceSearch]="invoiceSearch" [isForTiersIntegration]="true"></invoice-list>
+    </mat-tab>
     <mat-tab label="Comptes" *ngIf="responsableAccountSearch && responsableAccountSearch.id">
       <accounting-record [tiersToDisplay]="responsableAccountSearch"></accounting-record>
     </mat-tab>
