--- a/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
+++ b/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
@@ -138,12 +138,12 @@
                 [isDisabled]="!editMode"></chips-special-offers>
             </td>
             <td>
-              <generic-input [(model)]="tiers.rffFormaliteRate" [isDisabled]="!editMode" label="Taux RCA Formalité"
-                [form]="principalForm" propertyName="rcaFormaliteRate" type="number"></generic-input>
+              <generic-input [(model)]="tiers.rffFormaliteRate" [isDisabled]="!editMode" label="Taux RFF Formalité"
+                [form]="principalForm" propertyName="rffFormaliteRate" type="number"></generic-input>
             </td>
             <td>
-              <generic-input [(model)]="tiers.rffInsertionRate" [isDisabled]="!editMode" label="Taux RCA Insertion"
-                [form]="principalForm" propertyName="rcaInsertionRate" type="number"></generic-input>
+              <generic-input [(model)]="tiers.rffInsertionRate" [isDisabled]="!editMode" label="Taux RFF Insertion"
+                [form]="principalForm" propertyName="rffInsertionRate" type="number"></generic-input>
             </td>
           </tr>
         </table>
