--- a/client/src/app/routing/search/search.component.html
+++ b/client/src/app/routing/search/search.component.html
@@ -43,7 +43,8 @@
                     (click)="openEntity($event, entity)" (auxclick)="openEntity($event, entity)">
                     <mat-card-title-group>
                       <mat-card-title>{{entity.text.firstname}} {{entity.text.lastname}} </mat-card-title>
-                      <mat-card-subtitle>Commercial {{entity.text.salesEmployee.firstname}}
+                      <mat-card-subtitle *ngIf="entity.text.salesEmployee">Commercial
+                        {{entity.text.salesEmployee.firstname}}
                         {{entity.text.salesEmployee.lastname}}
                         -
                         {{entity.text.address}} {{entity.text.postalCode}}
