--- a/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
+++ b/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
@@ -25,8 +25,7 @@
         </td>
         <td>
           <generic-date-range-picker [(modelStart)]="paymentSearch.startDate" [(modelEnd)]="paymentSearch.endDate"
-            label="Plage de recherche" [form]="paymentForm" propertyNameStart="startDate" propertyNameEnd="endDate"
-            (onDateChange)="putDefaultPeriod()">
+            label="Plage de recherche" [form]="paymentForm" propertyNameStart="startDate" propertyNameEnd="endDate">
           </generic-date-range-picker>
         </td>
         <td class="fab-td-button">
