--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -79,7 +79,7 @@
             </tr>
           </table>
           <table class="full-width"
-            *ngIf="announcement && announcement.confrere && announcement.confrere.id == confrereJssPaper.id">
+            *ngIf="announcement && announcement.id && announcement.confrere && announcement.confrere.id == confrereJssPaper.id">
             <tr>
               <td>
                 <generic-input [(model)]="announcement.id" label="Numéro de l'annonce" [form]="announcementForm"
@@ -87,12 +87,13 @@
                 </generic-input>
               </td>
               <td>
-                <select-journal [(model)]="announcement.journal" label="Edition du journal" [form]="announcementForm"
-                  propertyName="journal" [isMandatory]="false" [isDisabled]="!editMode && !canEditJournal()">
+                <select-journal *ngIf="false" [(model)]="announcement.journal" label="Edition du journal"
+                  [form]="announcementForm" propertyName="journal" [isMandatory]="false"
+                  [isDisabled]="!editMode && !canEditJournal()">
                 </select-journal>
               </td>
               <td>
-                <generic-input [(model)]="announcement.journalPages" label="Page(s) dans le journal"
+                <generic-input *ngIf="false" [(model)]="announcement.journalPages" label="Page(s) dans le journal"
                   [form]="announcementForm" propertyName="journalPages" [isMandatory]="false"
                   [isDisabled]="!editMode  && !canEditJournal()" [maxLength]="250"></generic-input>
               </td>
@@ -206,24 +207,6 @@
     <mat-tab label="Options">
       <provision-options [editMode]="editMode" [provision]="provision" (provisionChange)="noticeChangeFunction()">
       </provision-options>
-    </mat-tab>
-    <mat-tab label="Gestion des pièces">
-      <fieldset [disabled]="editMode==false" class="fieldset-no-border">
-        <div class="form-div">
-          <mat-accordion multi>
-            <mat-expansion-panel expanded>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Epreuve de relecture
-                </mat-panel-title>
-                <ng-template [ngTemplateOutlet]="accordionTools"></ng-template>
-              </mat-expansion-panel-header>
-              <generic-toggle [(model)]="announcement.isProofReadingDocument" label="Epreuve de relecture ?"
-                [form]="announcementForm" propertyName="isProofReadingDocument"></generic-toggle>
-            </mat-expansion-panel>
-          </mat-accordion>
-        </div>
-      </fieldset>
     </mat-tab>
     <mat-tab label="Historique de l'annonce" *ngIf="announcement.id!=null && announcement.id!=undefined">
       <history [entity]="announcement" [entityType]="ANNOUNCEMENT_ENTITY_TYPE" [displayOnlyFields]="['notice']"
