--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -154,7 +154,7 @@
       <ng-container *ngIf="instanceOfCustomerOrderFn(quotation)">
         <tr class="mat-row" *ngFor="let deposit of quotation.deposits">
           <td class="mat-cell">
-            Accompte n°{{deposit.id}}
+            Acompte n°{{deposit.id}}
           </td>
           <td class="td-price mat-cell">
             - {{deposit.depositAmount|number}} €
