--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -94,7 +94,7 @@
         <ng-container *ngFor="let deposit of quotation.deposits">
           <tr>
             <td>
-              Accompte n°{{deposit.id}}
+              Acompte n°{{deposit.id}}
             </td>
             <td class="td-price">
               - {{deposit.depositAmount|number}} €
