--- a/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
+++ b/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
@@ -8,7 +8,7 @@
       <ng-container *ngIf="!column.displayAsGrade && !column.displayAsEmployee">
         <td mat-cell *matCellDef="let element" [matTooltip]="column.isShrinkColumn?getColumnValue(column,element):''"
           [ngClass]="{'td-label':column.isShrinkColumn}">
-          <span>{{getColumnValue(column,
+          <span [ngClass]="{'color-warn':getIsElementWarnColor(column,element)}">{{getColumnValue(column,
             element)}}
             <mat-icon [matTooltip]="column.actionTooltip" color="accent" class="pointer column-content-icon"
               (click)="openColumnLink($event, column, element)" (auxclick)="openColumnLink($event, column, element)"
@@ -50,8 +50,9 @@
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
-    <tr mat-row *matRowDef="let row; columns: getDisplayedColumns();" (click)="rowClicked(row)"
-      [ngClass]="{'pointer':onRowClick && onRowClick.observers && onRowClick.observers.length>0, 'selected-mat-row':idRowSelected && row.id && idRowSelected==row.id}">
+    <tr mat-row *matRowDef="let row; columns: getDisplayedColumns();" (click)="rowClicked(row)" [ngClass]="{'pointer':onRowClick && onRowClick.observers && onRowClick.observers.length>0,
+      'selected-mat-row':idRowSelected && row.id && idRowSelected==row.id,
+      'color-warn':true}">
     </tr>
   </table>
   <mat-icon class="export-icon pointer" matTooltip="Exporter en Excel"
