--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -35,6 +35,14 @@
           </tr>
           <tr>
             <td>
+              <select-accounting-journal [(model)]="constant.accountingJournalMiscellaneousOperations"
+                [form]="constantForm" propertyName="accountingJournalMiscellaneousOperations"
+                label="Journal de comptabilité - Opérations diverses" [isDisabled]="!editMode">
+              </select-accounting-journal>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-accounting-journal [(model)]="constant.accountingJournalPurchases" [form]="constantForm"
                 propertyName="accountingJournalPurchases" label="Journal de comptabilité - Achats"
                 [isDisabled]="!editMode">
