--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -131,8 +131,12 @@
           <mat-tab label="Prestations" *ngIf="(quotation.tiers || quotation.responsable  || quotation.confrere)  ">
             <div class="mat-elevation-z2 form-div" *ngIf="quotation.assoAffaireOrders">
               <mat-tab-group animationDuration="0ms" #tabs>
-                <mat-tab *ngFor="let asso of quotation.assoAffaireOrders" [label]="asso.affaire.denomination?asso.affaire.denomination:(asso.affaire.firstname + ' ' +
-                asso.affaire.lastname)">
+                <mat-tab *ngFor="let asso of quotation.assoAffaireOrders">
+                  <ng-template mat-tab-label>
+                    {{asso.affaire.denomination?asso.affaire.denomination:(asso.affaire.firstname + ' ' +
+                    asso.affaire.lastname)}} <mat-icon matTooltip="Supprimer l'affaire"
+                      (click)="deleteAffaire(asso.affaire);$event.stopPropagation();" class="pointer">delete</mat-icon>
+                  </ng-template>
                   <div class="mat-accordion-container full-width">
                     <mat-accordion multi>
                       <mat-expansion-panel expanded="false">
