--- a/client/src/app/modules/quotation/components/provision/provision.component.html
+++ b/client/src/app/modules/quotation/components/provision/provision.component.html
@@ -169,7 +169,7 @@
   </button>
   <button mat-menu-item
     *ngIf="currentProvisionWorkflow && currentProvisionWorkflow.announcement && currentProvisionWorkflow.announcement.confrere && currentProvisionWorkflow.announcement.confrere.journalType.id==journalTypePaper.id"
-    (click)="generatePublicationReceiptMail()">
+    (click)="generatePublicationReceiptMail(currentProvisionWorkflow.announcement)">
     <span>Recevoir le mail d'attestation de parution</span>
   </button>
   <button mat-menu-item
@@ -181,5 +181,8 @@
     *ngIf="currentProvisionWorkflow && currentProvisionWorkflow.announcement && currentProvisionWorkflow.announcement.confrere && currentProvisionWorkflow.announcement.confrere.journalType.id==journalTypeSpel.id"
     (click)="generatePublicationFlagMail()">
     <span>Recevoir le mail de témoin de publication</span>
+  </button>
+  <button mat-menu-item *ngIf="currentProvisionWorkflow" (click)="generateAttachmentQueryMail()">
+    <span>Envoyer un mail de demande de pièces</span>
   </button>
 </mat-menu>
