--- a/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
+++ b/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div">
+<div class="mat-elevation-z2 form-div min-height">
   <div class="full-width">
     <table class="full-width table-fixed-layout" *ngIf="!isForDashboard && !isForTiersIntegration && quotationSearch">
       <tr>
